--- a/sisi.css
+++ b/sisi.css
@@ -134,7 +134,7 @@ a:hover {
   margin-top: 30px;
   cursor: pointer;
   color: #FFFAFA;
-  background-color: #FF69B4;
+  background-color: white;
 }
 .flat-page .content .image img {
   max-width: 120%;
