--- a/sisi.css
+++ b/sisi.css
@@ -9,10 +9,10 @@ a {
   color: #DB7093;
 }
 a:visited {
-  color: #C71585;
+  color: #FF0000;
       }     
 a:hover {
-  color: #FF1493;
+  color: #FF00FF;
       }
       ul {
   list-style: none;
@@ -31,13 +31,11 @@ a:hover {
     width: 760px;
   }
 }
-
 @media (min-width: 992px) {
   .container {
     width: 970px;
   }
 }
-
 @media (min-width: 767px) {
   .container {
     width: 1170px;
@@ -46,8 +44,7 @@ a:hover {
 .flat-page header {
   min-height: 80px;
   display: flex;
-}
-      
+}   
 @media (max-width: 767px) {
   .flat-page header {
     min-height: auto;
@@ -58,8 +55,7 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-      
+}    
 @media (max-width: 767px) {
   .flat-page header .container {
     flex-direction: column;
@@ -69,8 +65,7 @@ a:hover {
 .flat-page header .links {
   display: flex;
   align-items: center;
-}
-      
+}    
 @media (max-width: 900px) {
   .flat-page header .links {
     text-align: center;
@@ -101,7 +96,6 @@ a:hover {
   gap: 140px;
   min-height: calc(100vh - 80px);
 }
-      
 @media (max-width: 767px) {
   .flat-page .content .container {
     gap: 0;
@@ -109,8 +103,7 @@ a:hover {
     justify-content: center;
     flex-direction: column-reverse;
   }
-}
-      
+}    
 @media (max-width: 767px) {
   .flat-page .content .info {
     text-align: center;
@@ -133,8 +126,8 @@ a:hover {
   padding: 12px 30px;
   margin-top: 30px;
   cursor: pointer;
-  color: #FFFAFA;
-  background-color: white;
+  color: #ffffff;
+  background-color: #FF69B4;
 }
 .flat-page .content .image img {
   max-width: 120%;
