--- a/sisi.css
+++ b/sisi.css
@@ -3,16 +3,16 @@
 }
 body {
   font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(120deg, #ffffff, #FFC0CB, #DB7093);
+  background: linear-gradient(120deg, #FFFFFF, #FFC0CB, #DB7093);
 }
 a {
   color: #DB7093;
 }
 a:visited {
-  color: #ffffff;
+  color: #FFFFFF;
       }     
 a:hover {
-  color: black;
+  color: #000000;
       }
       ul {
   list-style: none;
@@ -86,7 +86,7 @@ a:hover {
 .flat-page header .links li:last-child {
   border-radius: 20px;
   padding: 10px 20px;
-  color: white;
+  color: #FFFFFF;
   background-color: #FF69B4;
 }
 .flat-page .content .container {
@@ -126,7 +126,7 @@ a:hover {
   padding: 12px 30px;
   margin-top: 30px;
   cursor: pointer;
-  color: white;
+  color: #FFFFFF;
   background-color: #FF69B4;
 }
 .flat-page .content .image img {
